Continuacao da injecao de dependencias
