# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Rentalx Documentation",
+        "title": "Rentx Documentation",
         "description": "This is an API Rent",
         "version": "1.0.0",
         "contact": {
@@ -74,6 +74,74 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Import categories",
+                "description": "Import categories",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        }
+    },
+    "/specifications": {
+        "post": {
+            "tags": [
+                "Specification"
+            ],
+            "summary": "Create a specification",
+            "description": "Create a new Specification",
+            "requestBody": {
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/definitions/Specification"
+                        }
+                    }
+                }
+            }
+        },
+        "response": {
+            "201": {
+                "description": "Created"
+            },
+            "500": {
+                "description": "Specification alredy exist"
+            }
+        }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
                 }
             }
         }
